# test_ros_packages

hic_apps/: xxx.hic_app
ros_sample_package/: package.xml
ros_sample_package/rapp/a/: a.rapp
ros_sample_package/services/222/: 222.service
ros_sample_package/services/aa1111/: aa1111.service
ros_sample_package/services/aaaa0000/: aaaa0000.service
ros_sample_package/services/aaaa0001/: aaaa0001.service
ros_sample_package/services/aaaa1111/: aaaa1111.service
ros_sample_package/services/aaaa2222/: aaaa2222.service
ros_sample_package/services/branch-test0/: branch-test0.service
ros_sample_package/services/branch-test222/: branch-test222.service
ros_sample_package/services/ddd/: ddd.service
ros_sample_package/services/hic0/: hic0.interactions
ros_sample_package/services/master-test0/: master-test0.service
ros_sample_package/services/qqqq1111/: qqqq1111.service
ros_sample_package/services/qwerasdf/: qwerasdf.service
ros_sample_package/services/soso22/: soso22.interactions  soso22.parameters  soso22.service  soso22.workflows
ros_sample_package/services/zxcvzxvc/: zxcvzxvc.service
ros_sample_package/services/zzzz/: zzzz.service
ros_sample_package2/: package.xml
ros_sample_package2/rapp/1/: 1.rapp
ros_sample_package2/services/4444/: 4444.service
ros_sample_package2/workflows/: global-getset.wf  some.wf  speak.wf  use_hic_app0.wf
ros_sample_package3/: package.xml
ros_sample_package3/rapp/1/: 1.interfaces
ros_sample_package3/rapp/a111/: a111.interfaces  a111.rapp
ros_sample_package3/services/2aa111122/: 2aa111122.service
ros_sample_package3/services/aa1111/: aa1111.service
ros_sample_package3/services/alloc4/: alloc4.parameters  alloc4.service  alloc4.workflows
ros_sample_package3/services/alloc4/workflows/: alloc3.wf  alloc4.wf
ros_sample_package3/services/hic0/: hic0.service
ros_sample_package3/services/hichic0/: hichic0.interactions  hichic0.launcher  hichic0.parameters  hichic0.service
ros_sample_package3/services/qwer/: qwer.service
ros_sample_package3/services/qwerqwerqwer/: qwerqwerqwer.service
ros_sample_package3/services/soso/: soso.interactions  soso.parameters  soso.service  soso.workflows
ros_sample_package3/services/soso/workflows/: send_order0.wf
ros_sample_package3/services/soso22/: soso22.interactions  soso22.parameters  soso22.service  soso22.workflows
ros_sample_package3/services/soso22/workflows/: send_order0.wf
ros_sample_package3/services/yes111/: yes111.service
ros_sample_package3/services/zzz/: zzz.interactions  zzz.parameters  zzz.service  zzz.workflows
ros_sample_package3/services/zzz/workflows/: hichic0.wf
ros_sample_package3/workflows/: only-func.wf
(+20 files in other folders)
